<?xml version="1.0"?>
<package format="2">
  <name>cbf_module</name>
  <version>0.0.1</version>
  <description>CBF safety filter for smart pilot assist</description>

  <maintainer email="123">Alexandre B</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>mrs_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>mrs_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>octomap</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>

</package>
