<?xml version="1.0"?>
<package format="2">
  <name>cbf_filter</name>
  <version>0.1.0</version>
  <description>Control-Barrier-Function safety filter for UAV pilot inputs, using OctoMap + ESDF.</description>

  <maintainer email="123@456.com">Alex B.</maintainer>
  <license>BSD</license>

  <!-- build tools -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- run-time & build-time dependencies -->
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>octomap_ros</depend>
  <depend>octomap_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>eigen</depend>
  <depend>voxblox_ros</depend>


  <!-- export catkin-package information -->
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
